<resources>
    <string name="app_name">ViaCepTest</string>
    <string name="action_settings">Settings</string>
    <string name="next">Anunciar</string>
    <string name="type_announcement">TIPO DO ANÚNCIO</string>
    <string name="city">Cidade</string>
    <string name="neighborhood">Bairro</string>
    <string name="number">número</string>
    <string name="adjunct">complemento</string>
    <string name="street">rua</string>
    <string name="forgot_my_zip">Esqueceu o CEP ?</string>
    <string name="zip">CEP</string>
    <string name="Address">ENDEREÇO</string>
    <string name="title_activity_zip_code_search">ZipCodeSearchActivity</string>
    <string name="search_zip">Busca CEP</string>
    <string name="search_zip_code_address">Buscar</string>
    <string name="result_search_zip_whith_address">Resultado (endereços)</string>


    <string-array name="states">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>


    <string-array name="type_property">
        <item>Apartamento Padrão</item>
        <item>Casa Padrão</item>
        <item>Casa de condomínio</item>
        <item>Casa de vila</item>
        <item>Flat</item>
        <item>Kitchenette</item>
    </string-array>


    <string-array name="type_announcement">
        <item>Tipo 1</item>
        <item>Tipo 2</item>
    </string-array>

</resources>
