<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.viaceptest.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/sub_title_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/Address"
        android:textAlignment="center"
        android:textColor="#f9f9f9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ll_fieldset_1"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <LinearLayout
        android:id="@+id/ll_fieldset_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ll_fieldset_2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_zip_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="8" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_zip_code_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="searchZipCode"
            android:paddingTop="15dp"
            android:text="@string/forgot_my_zip"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_fieldset_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ll_fieldset_3"
        app:layout_constraintRight_toRightOf="@+id/ll_fieldset_1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/ll_fieldset_1"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/street"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_complement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_complement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/adjunct"
                android:inputType="text"
                android:maxLength="8" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_fieldset_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ll_fieldset_4"
        app:layout_constraintRight_toRightOf="@+id/ll_fieldset_2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/ll_fieldset_2"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/number"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_neighbor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_neighbor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/neighborhood"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_fieldset_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/sub_title_3"
        app:layout_constraintRight_toRightOf="@+id/ll_fieldset_3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/ll_fieldset_3">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/sp_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/sub_title_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/type_announcement"
        android:textColor="#f9f9f9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sp_type_announcement"
        app:layout_constraintLeft_toLeftOf="@+id/ll_fieldset_4"
        app:layout_constraintRight_toRightOf="@+id/ll_fieldset_4"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Spinner
        android:id="@+id/sp_type_announcement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintRight_toRightOf="@+id/sub_title_3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/sub_title_3"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="86dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/sp_type_announcement"
        app:layout_constraintRight_toRightOf="@+id/sp_type_announcement"
        app:layout_constraintTop_toTopOf="@+id/sub_title_3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


</android.support.constraint.ConstraintLayout>
